bugfix menu z-index

--- a/sass/blocks/_menu.scss
+++ b/sass/blocks/_menu.scss
@@ -44,7 +44,7 @@
         transform: scale(0);
         opacity: 0;
         transition: all .5s;
-
+        z-index: 999999;
         &.visible {
             opacity: 1;
             transform: scale(1);
